--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="js/knockout.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCXZtFSTS35oIM_e8iL7uIOMm2G_23Rng"></script>
+	<script src="js/map.js"></script>
+	<link rel="stylesheet" href="css/style.css">
+	
     
     <!--<link rel="stylesheet" href="css/style.css">-->
 </head>
 <body>
-	
+	<div id="map-canvas"></div>
 
 	<script src="js/script.js"></script>
 </body>
