ko.compute url based on loaction put in to input

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
 	<div id="location-input">
-			<input type="text" data-bind="value: inputVal">
+			<input type="text" data-bind="value: cityVal">
 			<button data-bind="click: getData">GO!</button>
-			<p><span data-bind="text: inputVal"></span></p>
+			<p><span data-bind="text: cityVal"></span></p>
 	</div>
 	<div id="map-canvas"></div>
 
