Move SeatGeek api call into maps.js; Enable dynamic lat long based api call to SeatGeek based on geocoded address

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<div id="location-input">
 			<input type="text" data-bind="value: cityVal">
-			<button data-bind="click: getData">GO!</button>
+			<button data-bind="click: runSearch">GO!</button>
 			<p><span data-bind="text: cityVal"></span></p>
 	</div>
 	<div id="map-canvas"></div>
