--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="js/knockout.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCXZtFSTS35oIM_e8iL7uIOMm2G_23Rng"></script>
 	<script src="js/map.js"></script>
+	<script src="js/seatGeek.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
