Change script.js name to koScript.js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 	</div>
 	<div id="map-canvas"></div>
 
-	<script src="js/script.js"></script>
+	<script src="js/koScript.js"></script>
 </body>
 </html> 
