--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 			<p><span data-bind="text: cityVal"></span></p>
 	</div>
 	<div id="map-canvas"></div>
+	<div id="results">
+		<ul id="results-list" data-bind="foreach: performers">
+			<li data-bind="text: performerName"></li>
+		</ul>
+	</div>
+	<div id="performer-info"></div>
 
 	<script src="js/koScript.js"></script>
 </body>
