--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 			<button data-bind="click: runSearch">GO!</button>
 			<p><span data-bind="text: cityVal"></span></p>
 	</div>
-	<div id="map-canvas"></div>
-	<div id="results">
-		<ul id="results-list" data-bind="foreach: performers">
-			<li data-bind="text: performerName, click: $parent.displayEvent"></li>
-		</ul>
+	<div class="map-list">
+		<div id="map-canvas"></div>
+		<div id="results">
+			<ul id="results-list" data-bind="foreach: performers">
+				<li data-bind="text: performerName, click: $parent.displayEvent"></li>
+			</ul>
+		</div>
 	</div>
 	<div id="performer-info"></div>
 
