set temporary css to show results and event info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 			</ul>
 		</div>
 	</div>
-	<div id="performer-info"></div>
+	<div id="performer-info">
+		hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+
+	</div>
 
 	<script src="js/koScript.js"></script>
 </body>
