--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 		</div>
 	</div>
 	<div id="performer-info">
+		hellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohellohello
+
 	</div>
 
 	<script src="js/koScript.js"></script>
