Begin building performer info view; Add current even name and date from list view click

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 		</div>
 	</div>
 	<div id="performer-info">
+		<p data-bind="text: currentEventName"></p>
+		<p data-bind="text: currentEventDate"></p>
 	</div>
 
 	<script src="js/koScript.js"></script>
