--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 	</div>
 	<div id="performer-info">
 		<p data-bind="visible: currentEventName">Event: <span data-bind="text: currentEventName"></span></p>
+		<p data-bind="visible: currentVenueName">Venue: <span data-bind="text: currentVenueName"></span></p>
+		<p data-bind="visible: currentVenueAddress">Address: <span data-bind="text: currentVenueAddress"></span></p>
 		<p data-bind="visible: currentEventDate">Date/Time: <span data-bind="text: currentEventDate"></span></p>
 		<div data-bind="foreach: currentPerformers">
 			<p data-bind="visible: performerName">Peformer: <span data-bind="text: performerName"></span></p>
