--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="map-canvas"></div>
 		<div id="results">
 			<ul id="results-list" data-bind="foreach: performers">
-				<li data-bind="text: performerName, click: $parent.displayEvent"></li>
+				<li data-bind="text: performerName, click: $parent.displayEvent, css: { 'highlight-item': performerIndex === $parent.currentEventIndex() }"></li>
 			</ul>
 		</div>
 	</div>
