Performer info only shows selected performer from result list

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 		<p data-bind="visible: currentVenueName">Venue: <span data-bind="text: currentVenueName"></span></p>
 		<p data-bind="visible: currentVenueAddress">Address: <span data-bind="text: currentVenueAddress"></span></p>
 		<p data-bind="visible: currentEventDate">Date/Time: <span data-bind="text: currentEventDate"></span></p>
-		<div data-bind="foreach: currentPerformers">
-			<p data-bind="visible: performerName">Peformer: <span data-bind="text: performerName"></span></p>
+		<p data-bind="visible: currentPerformerName">Peformer: <span data-bind="text: currentPerformerName"></span></p>
 		</div>
 	</div>
 
