Set initial filter input, function, and remove filter function

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<div class="map-list">
 		<div id="map-canvas"></div>
 		<div id="results">
+			<input type="text" data-bind="value: venueVal">
+			<button data-bind="click: filterVenues">GO!</button>
 			<ul id="results-list" data-bind="foreach: performers">
 				<li data-bind="text: performerName, click: $parent.displayEvent, css: { 'highlight-event': eventIndex === $parent.currentEventIndex(), 'highlight-item': performerID === $parent.currentPerformerID() }"></li>
 			</ul>
