--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 			<input type="text" data-bind="value: venueVal">
 			<button data-bind="click: filterVenues">Set Filter</button>
 			<button data-bind="click: removeFilter">Remove Filter</button>
-			<ul id="results-list" data-bind="foreach: performers">
-
-						<li data-bind="text: performerName, click: $parent.displayEvent, css: { 'highlight-event': eventIndex === $parent.currentEventIndex(), 'highlight-item': performerID === $parent.currentPerformerID() }"></li>
-
+			<ul id="results-list" data-bind="foreach: events">
+				<li><span data-bind="text: eventVenue.name"></span>
+					<ul data-bind="foreach: eventPerformers">
+						<li data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
+						</li>
+					</ul>
+				</li>
 			</ul>
 		</div>
 	</div>
