Create JSON stringifier for EN artist data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<input type="text" data-bind="value: cityVal">
 			<button data-bind="click: runSearch">GO!</button>
 			<button data-bind="click: runEcho"> Run Echo</button>
-			<button data-bind="click: testEcho"> Test Echo</button>
+			<!--<button data-bind="click: testEcho"> Test Echo</button>-->
 			<p><span data-bind="text: cityVal"></span></p>
 	</div>
 	<div class="map-list">
