Echo Nest test for artist bucket data works

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 	<div id="location-input">
 			<input type="text" data-bind="value: cityVal">
 			<button data-bind="click: runSearch">GO!</button>
-			<button data-bind="click: echoCreate"> Create Echo</button>
-			<button data-bind="click: echoUpdate"> Update Echo</button>
-			<button data-bind="click: echoDelete"> Delete Echo</button>
-			<button data-bind="click: echoStatus"> Status Echo</button>
-			<button data-bind="click: echoGenres"> Get Genres Echo</button>
+			<button data-bind="click: searchEchoNest">Run Echo</button>
 			<!--<button data-bind="click: testEcho"> Test Echo</button>-->
 			<p><span data-bind="text: cityVal"></span></p>
 	</div>
