Finish echo nest search function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="location-input">
 			<input type="text" data-bind="value: cityVal">
 			<button data-bind="click: runSearch">GO!</button>
-			<button data-bind="click: searchEchoNest">Run Echo</button>
+			<button data-bind="click: runEchoNest">Run Echo</button>
 			<!--<button data-bind="click: testEcho"> Test Echo</button>-->
 			<p><span data-bind="text: cityVal"></span></p>
 	</div>
