--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="location-input">
 			<input type="text" data-bind="value: cityVal">
-			<button data-bind="click: runSearch">GO!</button>
+			<button data-bind="click: runSearch, text: searchButtonText"></button>
 			<button data-bind="click: runEchoNest">Run Echo</button>
 			<!--<button data-bind="click: testEcho"> Test Echo</button>-->
 			<p><span data-bind="text: cityVal"></span></p>
