--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="location-input">
+	<div data-bind="if: !performerInfo()">
 			<input type="text" data-bind="value: cityVal">
 			<button data-bind="click: runSearch, text: searchButtonText"></button>
-			<p><span data-bind="text: cityVal"></span></p>
+			<div><span data-bind="text: cityVal"></span></div>
 	</div>
-	<div class="map-list">
+	<div data-bind="if: !performerInfo(), css: {'map-list': !performerInfo()}">
 		<div id="map-canvas"></div>
-		<div id="results">
-			<input type="text" data-bind="value: venueVal">
+		<div class = "results" data-bind="if: events().length > 0 ">
+			<input type="text" placeholder="Venue Name" data-bind="value: venueVal">
 			<button data-bind="click: filterVenues">Set Filter</button>
 			<button data-bind="click: removeFilter">Remove Filter</button>
 			<div id="results-list" data-bind="foreach: events">
 				<div><span data-bind="text: eventVenue.name"></span>
 					<div data-bind="foreach: eventPerformers">
-						<p class="artist_name" data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
-						</p>
+						<div class="artist_name" data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div id="performer-info">
+	<div data-bind="if: performerInfo" class="performer-info">
+		<button data-bind="click: closePerformerInfo"> Back To Map </button>
 		<p data-bind="visible: currentEventName">Event: <span data-bind="text: currentEventName"></span></p>
 		<p data-bind="visible: currentVenueName">Venue: <span data-bind="text: currentVenueName"></span></p>
 		<p data-bind="visible: currentVenueAddress">Address: <span data-bind="text: currentVenueAddress"></span></p>
@@ -39,20 +40,18 @@
 		<p data-bind="visible: currentPerformerName">Peformer: <span data-bind="text: currentPerformerName"></span></p>
 		<p data-bind="visible: currentPerformerGenres().length > 0">Genres: 
 			<div data-bind="foreach: currentPerformerGenres">
-				<p data-bind="text: name"></p>
+				<div data-bind="text: name"></div>
 			</div>
 		</p>
-
 		<p data-bind="visible: currentPerformerURLs">Links: 
 			<div data-bind="foreach: currentPerformerURLs">
-				<p data-bind="if: $data.lastfm_url"><a data-bind="attr: { href: lastfm_url, target:'_blank'}">Last FM</a></p>
-				<p data-bind="if: $data.mb_url"><a data-bind="attr: { href: mb_url, target:'_blank'}">MusicBrainz</a></p>
-				<p data-bind="if: $data.myspace_url"><a data-bind="attr: { href: myspace_url, target:'_blank'}">Myspace</a></p>
-				<p data-bind="if: $data.twitter_url"><a data-bind="attr: { href: twitter_url, target:'_blank'}">Twitter</a></p>
-				<p data-bind="if: $data.wikipedia_url"><a data-bind="attr: { href: wikipedia_url, target:'_blank'}">Wikipedia</a></p>
+				<div data-bind="if: $data.lastfm_url"><a data-bind="attr: { href: lastfm_url, target:'_blank'}">Last FM</a></div>
+				<div data-bind="if: $data.mb_url"><a data-bind="attr: { href: mb_url, target:'_blank'}">MusicBrainz</a></div>
+				<div data-bind="if: $data.myspace_url"><a data-bind="attr: { href: myspace_url, target:'_blank'}">Myspace</a></div>
+				<div data-bind="if: $data.twitter_url"><a data-bind="attr: { href: twitter_url, target:'_blank'}">Twitter</a></div>
+				<div data-bind="if: $data.wikipedia_url"><a data-bind="attr: { href: wikipedia_url, target:'_blank'}">Wikipedia</a></div>
 			</div>
 		</p>
-
 		<p data-bind="visible: currentPerformerVideos().length > 0">Videos:
 			<div data-bind="foreach: currentPerformerVideos">
 					<a data-bind="attr: {href: url, target:'_blank'}"><img data-bind="attr: {src: image_url}"></a>
