--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 </head>
 <body>
 	<div class="container">
-		<div data-bind="if: !performerInfo(), css: {'map-list': !performerInfo()}">
-			<div class="row">
-				<div class="location-input" data-bind="if: !performerInfo()">
-					<input type="text" data-bind="value: cityVal">
-					<button data-bind="click: runSearch, text: searchButtonText"></button>
-				</div>
-				<div data-bind="css: {'col-md-7': resultsInfo}" id="map-canvas"></div>
-				<div class="col-md-4" "results" data-bind="if: resultsInfo">
-					<input type="text" placeholder="Venue Name" data-bind="value: venueVal">
-					<button data-bind="click: filterVenues">Set Filter</button>
-					<button data-bind="click: removeFilter">Remove Filter</button>
-					<div id="results-list" data-bind="foreach: events">
-						<div><span data-bind="text: eventVenue.name"></span>
-							<div data-bind="foreach: eventPerformers">
-								<div class="artist_name" data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
+			<div data-bind="if: !performerInfo(), css: {'map-list': !performerInfo()}">
+				<div class="row">
+					<div class="location-input" data-bind="if: !performerInfo()">
+						<input class="form-group" type="text" data-bind="value: cityVal">
+						<button class="btn btn-warning btn-sm" data-bind="click: runSearch, text: searchButtonText"></button>
+					</div>
+					<div data-bind="css: {'col-md-7': resultsInfo}" id="map-canvas"></div>
+					<div class="col-md-4" "results" data-bind="if: resultsInfo">
+						<input class="form-group" type="text" placeholder="Venue Name" data-bind="value: venueVal">
+						<button class="btn btn-warning btn-sm" data-bind="click: filterVenues">Set Filter</button>
+						<button class="btn btn-warning btn-sm" data-bind="click: removeFilter">Remove Filter</button>
+						<div id="results-list" data-bind="foreach: events">
+							<div><span data-bind="text: eventVenue.name"></span>
+								<div data-bind="foreach: eventPerformers">
+									<div class="artist_name" data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
+									</div>
 								</div>
 							</div>
 						</div>
@@ -34,36 +35,39 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div data-bind="visible: performerInfo" class="performer-info">
-		<button data-bind="click: closePerformerInfo"> Back To Map </button>
-		<p class="event-heading" data-bind="visible: currentEventName">Event<br><span data-bind="text: currentEventName"></span></p>
-		<p class="event-heading" data-bind="visible: currentVenueName">Venue<br><span data-bind="text: currentVenueName"></span></p>
-		<p class="event-heading" data-bind="visible: currentVenueAddress">Address<br><span data-bind="text: currentVenueAddress"></span></p>
-		<p class="event-heading" data-bind="visible: currentEventDate">Date/Time<br><span data-bind="text: currentEventDate"></span></p>
-		<p class="event-heading" data-bind="visible: currentPerformerName">Peformer<br><span data-bind="text: currentPerformerName"></span></p>
-		<p class="event-heading" data-bind="visible: currentPerformerGenres().length > 0">Genres<br>
-			<div data-bind="foreach: currentPerformerGenres">
-				<p data-bind="text: name"></p>
-			</div>
-		</p>
-		<div class="event-heading" data-bind="visible: currentPerformerURLs">Links<br>
-			<div data-bind="foreach: currentPerformerURLs">
-				<p data-bind="if: $data.lastfm_url"><a data-bind="attr: { href: lastfm_url, target:'_blank'}">Last FM</a></p>
-				<p data-bind="if: $data.mb_url"><a data-bind="attr: { href: mb_url, target:'_blank'}">MusicBrainz</a></p>
-				<p data-bind="if: $data.myspace_url"><a data-bind="attr: { href: myspace_url, target:'_blank'}">Myspace</a></p>
-				<p data-bind="if: $data.twitter_url"><a data-bind="attr: { href: twitter_url, target:'_blank'}">Twitter</a></p>
-				<p data-bind="if: $data.wikipedia_url"><a data-bind="attr: { href: wikipedia_url, target:'_blank'}">Wikipedia</a></p>
+		<div class="row">
+			<div data-bind="visible: performerInfo" class="performer-info">
+				<div class="col-md-12">
+					<button class="btn btn-warning back-btn" data-bind="click: closePerformerInfo"> Back To Map </button>
+				</div>
+				<div class="col-md-12">
+					<div data-bind="visible: currentEventName"><h2 class="info-heading">Event</h2><p class="info-subheading" data-bind="text: currentEventName"></p></div>
+					<div data-bind="visible: currentVenueName"><h2 class="info-heading">Venue</h2><p class="info-subheading" data-bind="text: currentVenueName"></p></div>
+					<div data-bind="visible: currentVenueAddress"><h2 class="info-heading">Address</h2><p class="info-subheading" data-bind="text: currentVenueAddress"></p></div>
+					<div data-bind="visible: currentEventDate"><h2 class="info-heading">Date/Time</h2><p class="info-subheading" data-bind="text: currentEventDate"></p></div>
+					<div data-bind="visible: currentPerformerName"><h2 class="info-heading">Peformer</h2><p class="info-subheading" data-bind="text: currentPerformerName"></p></div>
+					<div data-bind="visible: currentPerformerGenres().length > 0"><h2 class="info-heading">Genres</h2>
+						<div data-bind="foreach: currentPerformerGenres">
+							<p class="info-subheading" data-bind="text: name"></p>
+						</div>
+					</div>
+					<div data-bind="visible: currentPerformerURLs"><h2 class="info-heading">Links</h2>
+						<div data-bind="foreach: currentPerformerURLs">
+							<p class="info-subheading" data-bind="if: $data.lastfm_url"><a data-bind="attr: { href: lastfm_url, target:'_blank'}">Last FM</a></p>
+							<p class="info-subheading" data-bind="if: $data.mb_url"><a data-bind="attr: { href: mb_url, target:'_blank'}">MusicBrainz</a></p>
+							<p class="info-subheading" data-bind="if: $data.myspace_url"><a data-bind="attr: { href: myspace_url, target:'_blank'}">Myspace</a></p>
+							<p class="info-subheading" data-bind="if: $data.twitter_url"><a data-bind="attr: { href: twitter_url, target:'_blank'}">Twitter</a></p>
+							<p class="info-subheading" data-bind="if: $data.wikipedia_url"><a data-bind="attr: { href: wikipedia_url, target:'_blank'}">Wikipedia</a></p>
+						</div>
+					</div>
+					<div class="info-heading" data-bind="visible: currentPerformerVideos().length >0"><h2 class="info-heading">Videos</h2></div>
+					<div class="videos-list" data-bind="foreach: currentPerformerVideos">
+							<a data-bind="attr: {href: url, target:'_blank'}"><img data-bind="attr: {src: image_url}"></a>
+					</div>
+				</div>
 			</div>
 		</div>
-		<p class="event-heading" data-bind="visible: currentPerformerVideos().length > 0">Videos<br>
-			<div data-bind="foreach: currentPerformerVideos">
-					<a data-bind="attr: {href: url, target:'_blank'}"><img data-bind="attr: {src: image_url}"></a>
-			</div>
-		</p>
 	</div>
-
-
 	<script src="js/koScript.js"></script>
 </body>
 </html> 
