--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 				<div class="row">
 					<div class="location-input" data-bind="ifnot: performerInfo()">
 						<input class="form-group" type="text" data-bind="value: cityVal">
+						<span data-bind="if: events().length > 0">
+							<button class="btn btn-warning btn-sm" data-bind="click: cleanSearch">Change Neighborhood</button>
+						</span>
 						<button class="btn btn-warning btn-sm" data-bind="click: runSearch, text: searchButtonText"></button>
 					</div>
 					<div data-bind="css: {'col-md-7': resultsInfo}" id="map-canvas"></div>
-					<div class="col-md-4" "results" data-bind="if: resultsInfo">
+					<div class="col-md-5" "results" data-bind="if: resultsInfo">
 						<input class="form-group" type="text" placeholder="Venue Name" data-bind="value: venueVal">
 						<button class="btn btn-warning btn-sm" data-bind="click: filterVenues">Set Filter</button>
 						<button class="btn btn-warning btn-sm" data-bind="click: removeFilter">Remove Filter</button>
