--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<button class="btn btn-warning btn-sm" data-bind="click: removeFilter">Remove Filter</button>
 						<div id="results-list" data-bind="foreach: events">
 							<div>
-								<span class="venue-name" data-bind="text: eventVenue.name"></span>
+								<span class="venue-name" data-bind="text: eventVenue.name, click: $root.displayVenue"></span>
 								<div data-bind="foreach: eventPerformers">
 									<div class="artist_name" data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
 									</div>
