--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 					<div data-bind="visible: currentEventName"><h2 class="info-heading">Event</h2><p class="info-subheading" data-bind="text: currentEventName"></p></div>
 					<div data-bind="visible: currentVenueName"><h2 class="info-heading">Venue</h2><p class="info-subheading" data-bind="text: currentVenueName"></p></div>
 					<div data-bind="visible: currentVenueAddress"><h2 class="info-heading">Address</h2><p class="info-subheading" data-bind="text: currentVenueAddress"></p></div>
-					<div data-bind="visible: currentEventDate"><h2 class="info-heading">Date/Time</h2><p class="info-subheading" data-bind="text: currentEventDate"></p></div>
+					<div data-bind="visible: currentEventDate"><h2 class="info-heading">Date - Time</h2><p class="info-subheading" data-bind="text: currentEventDate"></p></div>
 					<div data-bind="visible: currentPerformerName"><h2 class="info-heading">Peformer</h2><p class="info-subheading" data-bind="text: currentPerformerName"></p></div>
-					<div data-bind="visible: currentPerformerGenres().length > 0"><h2 class="info-heading">Genres</h2>
+					<div data-bind="visible: currentPerformerGenres().length > 0"><h2 class="info-heading">Performer Genres</h2>
 						<div data-bind="foreach: currentPerformerGenres">
 							<p class="info-subheading" data-bind="text: name"></p>
 						</div>
@@ -67,10 +67,10 @@
 					<div class="info-heading" data-bind="visible: currentPerformerVideos().length >0"><h2 class="info-heading">Videos</h2></div>
 					<div class="videos-list" data-bind="foreach: currentPerformerVideos">
 						<span data-bind="if: $data.image_url">
-							<a data-bind="attr: {href: url, target:'_blank'}"><img data-bind="attr: {src: image_url}"></a>
+							<a data-bind="attr: {href: url, target:'_blank'}"><img class="videos" data-bind="attr: {src: image_url}"></a>
 						</span>
 						<span data-bind="ifnot: $data.image_url">
-							<a data-bind="attr: {href: url, target:'_blank'}"><img data-bind="attr: {src: 'images/default.jpg'}"></a>
+							<a data-bind="attr: {href: url, target:'_blank'}"><img class="videos" data-bind="attr: {src: 'images/default.jpg'}"></a>
 						</span>
 					</div>
 				</div>
