--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div data-bind="if: !performerInfo(), css: {'map-list': !performerInfo()}">
-		<div class="location-input" data-bind="ifnot: performerInfo()">
-			<input class="form-control" type="text" data-bind="value: cityVal">
-			<span data-bind="if: events().length > 0">
-				<button class="btn btn-warning btn-sm" data-bind="click: cleanSearch">Change Neighborhood</button>
-			</span>
-			<button class="btn btn-warning btn-sm" data-bind="click: runSearch, text: searchButtonText"></button>
+	<div class="location-input" data-bind="ifnot: performerInfo()">
+		<input type="text" data-bind="value: cityVal">
+		<span data-bind="if: events().length > 0">
+			<button class="btn btn-warning btn-sm" data-bind="click: cleanSearch">Change Neighborhood</button>
+		</span>
+		<button class="btn btn-warning btn-sm" data-bind="click: runSearch, text: searchButtonText"></button>
+	</div>
+	<div data-bind="if: resultsInfo">
+		<div>
+			<input class="form-control" type="text" placeholder="Venue Name" data-bind="value: venueVal">
+			<button class="btn btn-warning btn-sm" data-bind="click: filterVenues">Apply Filter</button>
+			<button class="btn btn-warning btn-sm" data-bind="click: removeFilter">Remove Filter</button>
 		</div>
-		<div data-bind="if: resultsInfo, css: {'results': resultsInfo}">
-			<input class="form-control" id="venue" type="text" placeholder="Venue Name" data-bind="value: venueVal">
-			<button class="btn btn-warning btn-sm filter-btn" data-bind="click: filterVenues">Apply Filter</button>
-			<button class="btn btn-warning btn-sm filter-btn" data-bind="click: removeFilter">Remove Filter</button>
-			<div id="results-list" data-bind="foreach: events">
-				<div>
-					<span class="venue-name" data-bind="text: eventVenue.name, click: $root.displayVenue"></span>
-					<div data-bind="foreach: eventPerformers">
-						<div class="artist-name" data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
-						</div>
+		<div class="list-group" data-bind="foreach: events">
+			<a href="#" class="list-group-item">
+				<h4 class="venue-name" data-bind="text: eventVenue.name, click: $root.displayVenue"></h4>
+				<div data-bind="foreach: eventPerformers">
+					<div data-bind="text: performerName, click: $root.displayEvent, css: { 'highlight-event': eventIndex === $root.currentEventIndex(), 'highlight-performer': performerID === $root.currentPerformerID() }">
 					</div>
 				</div>
-			</div>
+			</a>
 		</div>
+	</div>
+	<div data-bind="if: !performerInfo(), css: {'map-list': !performerInfo()}">
 		<div id="map-canvas"></div>
 	</div>
-	<div data-bind="if: performerInfo()" class="performer-info">
+	<div data-bind="if: performerInfo()">
 		<button class="btn btn-warning back-btn" data-bind="click: closePerformerInfo"> Back To Map </button>
 		<div data-bind="visible: currentEventName"><h2 class="info-heading">Event</h2><p class="info-subheading" data-bind="text: currentEventName"></p></div>
 		<div data-bind="visible: currentVenueName"><h2 class="info-heading">Venue</h2><p class="info-subheading" data-bind="text: currentVenueName"></p></div>
