Use JSHInt to clean code.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				<p class="info-subheading" data-bind="if: $data.myspace_url"><a data-bind="attr: { href: myspace_url, target:'_blank'}">Myspace</a></p>
 				<p class="info-subheading" data-bind="if: $data.twitter_url"><a data-bind="attr: { href: twitter_url, target:'_blank'}">Twitter</a></p>
 				<p class="info-subheading" data-bind="if: $data.wikipedia_url"><a data-bind="attr: { href: wikipedia_url, target:'_blank'}">Wikipedia</a></p>
+				<p class="info-subheading" data-bind="if: $data.official_url"><a data-bind="attr: { href: official_url, target:'_blank'}">Official</a></p>
 			</div>
 		</div>
 		<div class="info-heading" data-bind="visible: currentPerformerVideos().length >0"><h2 class="info-heading">Videos</h2></div>
