Change html links to minified css and js files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="js/knockout.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCXZtFSTS35oIM_e8iL7uIOMm2G_23Rng"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="dist/style.min.css">
 </head>
 <body>
 	<div data-bind="if: !performerInfo(), css: {'map-view': !performerInfo()}">
@@ -77,6 +77,6 @@
 			</span>
 		</div>
 	</div>
-	<script src="js/koScript.js"></script>
+	<script src="dist/app.min.js"></script>
 </body>
 </html> 
