--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="js/knockout.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCXZtFSTS35oIM_e8iL7uIOMm2G_23Rng"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="dist/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div data-bind="if: !performerInfo(), css: {'map-view': !performerInfo()}">
@@ -54,29 +54,21 @@
 		<div data-bind="visible: currentPerformerName"><h2 class="info-heading">Peformer</h2><p class="info-subheading" data-bind="text: currentPerformerName"></p></div>
 		<div data-bind="visible: currentPerformerGenres().length > 0"><h2 class="info-heading">Genres</h2>
 			<div data-bind="foreach: currentPerformerGenres">
-				<p class="info-subheading" data-bind="text: name"></p>
+				<p class="info-subheading" data-bind="text: $data"></p>
 			</div>
 		</div>
 		<div data-bind="visible: currentPerformerURLs().length > 0"><h2 class="info-heading">Links</h2>
 			<div data-bind="foreach: currentPerformerURLs">
-				<p class="info-subheading" data-bind="if: $data.lastfm_url"><a data-bind="attr: { href: lastfm_url, target:'_blank'}">Last FM</a></p>
-				<p class="info-subheading" data-bind="if: $data.mb_url"><a data-bind="attr: { href: mb_url, target:'_blank'}">MusicBrainz</a></p>
-				<p class="info-subheading" data-bind="if: $data.myspace_url"><a data-bind="attr: { href: myspace_url, target:'_blank'}">Myspace</a></p>
-				<p class="info-subheading" data-bind="if: $data.twitter_url"><a data-bind="attr: { href: twitter_url, target:'_blank'}">Twitter</a></p>
-				<p class="info-subheading" data-bind="if: $data.wikipedia_url"><a data-bind="attr: { href: wikipedia_url, target:'_blank'}">Wikipedia</a></p>
-				<p class="info-subheading" data-bind="if: $data.official_url"><a data-bind="attr: { href: official_url, target:'_blank'}">Official</a></p>
+				<p class="info-subheading" data-bind="if: $data.spotify"><a data-bind="attr: { href: spotify, target:'_blank'}">Spotify</a></p>
 			</div>
 		</div>
-		<div class="info-heading" data-bind="visible: currentPerformerVideos().length >0"><h2 class="info-heading">Videos</h2></div>
-		<div class="videos-list" data-bind="foreach: currentPerformerVideos">
-			<span data-bind="if: $data.image_url">
-				<a data-bind="attr: {href: url, target:'_blank'}"><img class="videos" data-bind="attr: {src: image_url}"></a>
-			</span>
-			<span data-bind="ifnot: $data.image_url">
-				<a data-bind="attr: {href: url, target:'_blank'}"><img class="videos" data-bind="attr: {src: 'images/default.jpg'}"></a>
+		<div class="info-heading" data-bind="visible: currentPerformerImages().length >0"><h2 class="info-heading">Images</h2></div>
+		<div class="images-list" data-bind="foreach: currentPerformerImages">
+			<span data-bind="if: $data.url">
+				<img class="images" data-bind="attr: {src: url}">
 			</span>
 		</div>
 	</div>
-	<script src="dist/app.min.js"></script>
+	<script src="js/koScript.js"></script>
 </body>
 </html> 
